--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ packages = [{include = "coursework_4"}]
 python = "^3.11"
 
 
+[tool.poetry.group.dev.dependencies]
+requests = "^2.28.2"
+pytest = "^7.2.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
